--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <nav>
   <ul>
-    <li><a routerLink="/first-component" routerLinkActive="active">First Component</a></li>
+    <li><a routerLink="/first-component" routerLinkActive="active2">First Component</a></li>
     <li><a routerLink="/second-component" routerLinkActive="active">Second Component</a></li>
   </ul>
 </nav>
